fix(welcome): audio play icon layout on safari

--- a/_sass/_welcome.scss
+++ b/_sass/_welcome.scss
@@ -243,7 +243,7 @@
 
     grid-row: 1 / -1;
     display: grid;
-    place-items: center;
+    place-content: center;
     aspect-ratio: 1;
 
     background-color: var(--_play-icon--color);
